--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "mapbox-gl": "^0.45.0",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
+    "react-map-gl": "^3.2.7",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4"
   },
