--- a/package.json
+++ b/package.json
@@ -16,5 +16,10 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "react-popper": "^1.0.0",
+    "react-transition-group": "^2.4.0",
+    "reactstrap": "^6.3.1"
   }
 }
