--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "react-popper": "^1.0.0",
     "react-transition-group": "^2.4.0",
     "reactstrap": "^6.3.1"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
   }
 }
