--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
   },
   "devDependencies": {
     "react-popper": "^1.0.0",
-    "react-transition-group": "^2.4.0",
-    "reactstrap": "^6.3.1"
+    "react-transition-group": "^2.4.0"
   }
 }
