--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "chart.js": "^2.7.2",
     "classnames": "^2.2.6",
     "mapbox-gl": "^0.45.0",
+    "moment": "^2.22.2",
     "rc-slider": "^8.6.1",
     "react": "^16.3.2",
+    "react-chartjs-2": "^2.7.4",
     "react-dom": "^16.3.2",
     "react-map-gl": "^3.2.7",
     "react-media": "^1.8.0",
