--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "air-quality",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://foxdrive.github.io/air-quality",
   "dependencies": {
     "classnames": "^2.2.6",
     "mapbox-gl": "^0.45.0",
@@ -17,9 +18,12 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "devDependencies": {
+    "gh-pages": "^1.2.0",
     "lodash": "^4.17.10",
     "react-popper": "^1.0.0",
     "react-transition-group": "^2.4.0",
