--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "lodash": "^4.17.10",
     "react-popper": "^1.0.0",
     "react-transition-group": "^2.4.0",
-    "reactstrap": "^6.3.1"
+    "reactstrap": "^6.3.1",
+    "victory": "^30.2.0"
   },
   "eslintConfig": {
     "extends": "react-app"
