--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "postbuild": "node check-service-worker.js",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
@@ -26,6 +27,7 @@
   "devDependencies": {
     "gh-pages": "^1.2.0",
     "lodash": "^4.17.10",
+    "react-loadable": "^5.5.0",
     "react-popper": "^1.0.0",
     "react-transition-group": "^2.4.0",
     "reactstrap": "^6.3.1",
