--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "air-quality",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://foxdrive.github.io/air-quality",
   "dependencies": {
     "chart.js": "^2.7.2",
     "classnames": "^2.2.6",
@@ -19,12 +18,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "gh-pages": "^1.2.0",
     "lodash": "^4.17.10",
     "react-loadable": "^5.5.0",
     "react-popper": "^1.0.0",
